[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Dmitry Gavrilenko <gavrilaz0076@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
operation = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
